# whatsapp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
contrib/: com.whatsapp-rs.plist  whatsapp-rs-task.xml  whatsapp-rs.service
docs/superpowers/plans/: 2026-04-21-messaging-plan.md  2026-04-21-qr-authentication-plan.md
docs/superpowers/specs/: 2026-04-21-messaging-design.md  2026-04-21-qr-authentication-design.md
examples/: agent_bot.rs  chat_demo.rs  command_bot.rs  echo_bot.rs  offhours_bot.rs  send_voice.rs  voice_bot.rs  webhook_bot.rs  wizard_bot.rs
src/: agent.rs  chat_meta.rs  chat_state.rs  client.rs  contacts.rs  daemon.rs  device_cache.rs  doctor.rs  error.rs  event_print.rs  install.rs  lib.rs  main.rs  message_store.rs  metrics.rs  outbox.rs  poll_store.rs  scheduler.rs  webhook.rs
src/app_state/: actions.rs  crypto.rs  decode.rs  keys.rs  lt_hash.rs  mod.rs  proto.rs  state.rs  sync.rs
src/auth/: credentials.rs  manager.rs  mod.rs  pair_success.rs  pairing_crypto.rs  session_store.rs
src/binary/: mod.rs  tokens.rs
src/media/: mod.rs
src/messages/: link_preview.rs  mod.rs  rate_limit.rs  recent_sends.rs  recv.rs  send.rs
src/noise/: mod.rs
src/qr/: ascii.rs
src/signal/: mod.rs  ratchet.rs  sender_key.rs  wa_proto.rs  x3dh.rs
src/socket/: dispatch.rs  group.rs  media_upload.rs  mod.rs  prekey.rs  privacy.rs  usync.rs
tests/: auth_flow_test.rs  binary_node_test.rs  message_store_test.rs  outbox_test.rs  pairing_code_test.rs  proto_test.rs  signal_test.rs  xeddsa_test.rs
